<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DBStorageActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <Button
            android:id="@+id/btn_create_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_create_db"
            android:onClick="createDB"/>

        <Button
            android:id="@+id/btn_update_db"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_update_db"
            android:onClick="updateDB"/>

        <Button
            android:id="@+id/btn_insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_insert"
            android:onClick="insertRecord"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_delete"
            android:onClick="deleteRecord"
            />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_update"
            android:onClick="updateRecord"/>

        <Button
            android:id="@+id/btn_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_query"
            android:onClick="queryRecord"/>

        <Button
            android:id="@+id/btn_transaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_btn_transaction"
            android:onClick="testTransaction"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />
</androidx.constraintlayout.widget.ConstraintLayout>